<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >

        <Button
            android:id="@+id/btn_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_details" />

        <Button
            android:id="@+id/btn_deposits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposits" />

        <Button
            android:id="@+id/btn_activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activities" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </FrameLayout>

</LinearLayout>